--- a/user-time-react-project/package.json
+++ b/user-time-react-project/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-time-react-project",
   "private": true,
-  "homepage": "https://raredrops.github.io/UserTimeReact/user-time-react-project",
+  "homepage": "https://raredrops.github.io/UserTimeReact",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
